<resources>
    <string name="app_name">Horoscope</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="lorem" translatable="false">

        The Capricorn Crew may have cause to celebrate today when 2024’s only
        full moon in Scorpio powers up your collaboration center. You might find
        out that a group endeavor has gotten the go-ahead or been singled out for
        an award. Because the eleventh house governs technology and progress, you
        need to turn your gaze toward the future. Look into apps that can coordinate
        team process and facilitate smooth communication. If you’ve been flying solo,
        this lunation cues you to join forces to lighten your workload and make life a
        lot more fun!
    </string>
    <string name="zodiac_connection">Zodiac Connection</string>
    <string name="calculate">calculate</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="user_information">User Information</string>
    <string name="username">Username:</string>
    <string name="gender">Gender</string>
    <string name="age">Age:</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="email">Email</string>
    <string name="buscar">Search</string>
    <string name="search_friend">Search Friend ...</string>
    <string name="weekly_ranking">Weekly Ranking</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language</string>
    <string name="english_language">English</string>
    <string name="spanish_language">Spanish</string>
    <string name="your_name">Your name</string>
    <string name="your_name_hint" >The name you prefer to be called by</string>
    <string name="birth_date">Birth Date</string>
    <string name="time_of_birth">Time of Birth</string>
    <string name="modify">Modify</string>
    <string name="notifications">Notifications</string>
    <string name="friendBirthdays">Friend birthdays</string>
    <string name="yourDailyHoroscope">Your daily horoscope</string>
    <string name="dark_mode">Dark mode</string>
    <string name="notification_channel_name">Horoscope notifications</string>
    <string name="notification_channel_description">Horoscope notifications channel</string>
    <string name="reminder">Reminder</string>
    <string name="reminderContent">Good morning! Remember to read your horoscope today.</string>
    <string name="hay_cumple">It\'s someone\'s birthday!</string>
    <string name="recuerda_felicitar">Remember to congratulate</string>
    <string name="loading">Loading...</string>
    <string name="previous">Previous</string>
    <string name="rellena_primero">First, you should fill all fields</string>
    <string name="percentage_of_affinity">Percentage of affinity</string>
    <string name="calculating">Calculating...</string>
    <string name="editar_perfil_usuario">Edit user profile</string>
    <string name="defects">Defects:</string>
    <string name="virtues">Virtues:</string>
    <string name="compatible_with">Compatible with:</string>
    <string name="placeBirth">Place of birth:</string>
    <string name="Time_of_birth">Time of birth:</string>
    <string name="zodiacSign">Zodiac Sign:</string>
    <string name="challenging_days">Challenging days</string>
    <string name="highlighted_days">highlighted days</string>
    <string name="horoscope">Horoscope</string>
    <string name="compat">Compatibility</string>
    <string name="settings">Settings</string>
    <string name="calculator">Calculator</string>
    <string name="friends">Friends</string>
    <string name="personalInfo">Personal info</string>
    <string name="astralDescription">Astral description</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
</resources>