<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/horoscopeFragment"
    >
    <fragment
        android:id="@+id/profileFragment"
        android:name="dadm.hsingh.horoscopoapp.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:popUpTo="@id/profileFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/horoscopeFragment"
        android:name="dadm.hsingh.horoscopoapp.ui.horoscope.HoroscopeFragment"
        android:label="@string/horoscope"
        tools:layout="@layout/fragment_horoscope"/>
    <fragment
        android:id="@+id/compatibilityFragment"
        android:name="dadm.hsingh.horoscopoapp.ui.compatibility.CompatibilityFragment"
        android:label="@string/compat"
        tools:layout="@layout/fragment_compatibility"/>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="dadm.hsingh.horoscopoapp.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>
</navigation>