<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeWidth="0dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_information"
                    android:textSize="25sp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/username"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#6E6C6C"
                    android:text="admin"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeBirth"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:layout_toStartOf="@id/placeBirth"/>
                <TextView
                    android:id="@+id/placeBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#6E6C6C"
                    android:text="Valencia"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:layout_toStartOf="@id/age"/>
                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#6E6C6C"
                    android:text="25"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:layout_toStartOf="@id/dateBirth"/>
                <TextView
                    android:id="@+id/dateBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#6E6C6C"
                    android:text="07/02/2003"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Time_of_birth"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:layout_toStartOf="@id/birthTime"/>
                <TextView
                    android:id="@+id/birthTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#6E6C6C"
                    android:text="hh:mm"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zodiacSign"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:layout_toStartOf="@id/zodiac_sign"/>
                <TextView
                    android:id="@+id/zodiac_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#6E6C6C"
                    android:text="leo"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>