<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/monthlyFragment">

    <ScrollView
        android:id="@+id/scroll3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Título -->
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Abril"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="16dp"
                android:gravity="center"
                />

            <!-- Párrafo largo -->
            <TextView
                android:id="@+id/textViewParagraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="15sp"
                android:padding="40dp"
                android:gravity="center"
                android:textStyle="italic"
                />

            <!-- Apartado 1 -->
            <TextView
                android:id="@+id/desafianteTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/challenging_days"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="16dp"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/desafiante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="15sp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:paddingBottom="16dp"
                android:gravity="center"
                android:textStyle="italic"
                />

            <!-- Apartado 2 -->
            <TextView
                android:id="@+id/destacadoTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/highlighted_days"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="16dp"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/destacado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="15sp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:paddingBottom="16dp"
                android:gravity="center"
                android:textStyle="italic"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>