<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zodiac_connection"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        />

    <LinearLayout
        android:id="@+id/compatible1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="70dp">

            <ImageView
                android:id="@+id/imageview_person1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/capricorn"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                />

        </com.google.android.material.card.MaterialCardView>



        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="0.8"
        >

        <TextView
            android:id="@+id/titleProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage_of_affinity"
            android:textSize="20sp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            >

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/circularProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cpb_background_progressbar_color="#b6bbd8"
                app:cpb_background_progressbar_width="20dp"
                app:cpb_progress_direction="to_right"
                app:cpb_progressbar_color="#3f51b5"
                app:cpb_progressbar_width="10dp"
                app:cpb_round_border="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0%"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>





    </LinearLayout>



    <LinearLayout
        android:id="@+id/compatible2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="70dp">

            <ImageView
                android:id="@+id/imageview_person2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/leo"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                />

        </com.google.android.material.card.MaterialCardView>




        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />




    </LinearLayout>


    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="0.8"
        >

        <TextView
            android:id="@+id/textCompatible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/lorem"
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="italic"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:text="@string/calculate"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            />

    </LinearLayout>








</LinearLayout>
