<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <LinearLayout
        android:id="@+id/bienvenido"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/crystal_ball"
            android:layout_weight="0.9"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Explora los secretos del universo estelar"
            android:textSize="40dp"
            android:layout_weight="0.4"
            android:textStyle="italic"
            android:gravity="center"
            />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bienvenido"
        app:layout_constraintBottom_toTopOf="@id/editDateBirth"
        />

    <LinearLayout
        android:id="@+id/editDateBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintBottom_toTopOf="@id/editTimeBirth"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthDateInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/birth_date"
            android:layout_weight="1"
            android:enabled="false"
            android:textColor="#000000"
            />

        <ImageButton
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/date_icon"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/editTimeBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDateBirth"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthTimeInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:enabled="false"
            android:hint="@string/time_of_birth"
            android:textColor="#000000"

            />

        <ImageButton
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/time_icon"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/next"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editTimeBirth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>